# eeg_dashboard

./: .gitignore  README.md  pyproject.toml
notebooks/: arousal_EDA.ipynb  extract_eeg_firebase_example.ipynb  features_statistical_analysis.ipynb  focus_test.ipynb  signal_processing_demo.ipynb
notebooks/html/: arousal_EDA.html
notebooks/old_experiments/: 250128_time_and_freq_filtered_data_eoec.ipynb  250130_test_on_openbci_data.ipynb  250204_ucsf_data_analysis.ipynb  250210_Full_Pipeline_Architecture.ipynb  250217_Signal_Synchronicity.ipynb  250217_state_identification_algorithm.ipynb  250228_UCSF_PAC_En_Analysis.ipynb  250307_phase_locking_value.ipynb  250318_SVM_model_project_updated.ipynb  README.md
scripts/: README_web_app.md  arousal_eda.py  extract_eeg_firebase_example.py  requirements_web.txt  session_browser.py  start_web_app.py  web_app.py
scripts/templates/: base.html  login.html  session_detail.html  sessions.html
src/awear_neuroscience/utils/: plot_utils.py
tests/test_data_extraction/: test_data_extraction_loader.py  test_data_extraction_utils.py
tests/test_signal_processing/: test_artifacts.py  test_features.py  test_filters.py
