[tool.poetry]
name = "awear_neuroscience"
version = "0.1.0"
description = "Neuroscience signal-processing pipeline"
authors = ["Simone Balatti <simone.balatti@gmail.com>", "Cristiana Principato <cristiana.principato@gmail.com>","Alexander Speer <alexspeer12@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["neuroscience", "EEG","signal-processing", "pipeline"]
homepage = "https://github.com/mrAwear/awear_neuroscience/"
repository = "https://github.com/mrAwear/awear_neuroscience/"
documentation = "https://github.com/mrAwear/awear_neuroscience/README.md"

packages = [
  { include = "awear_neuroscience", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24"
scipy = "^1.10"
pandas = "^2.0"
google-cloud-firestore = "^2.21.0"
firebase-admin = "^6.9.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^23.3"
isort = "^6.0"
mypy = "^1.0"

[tool.poetry.scripts]
awear-pipeline = "awear_neuroscience.pipeline:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

